ggml/f4/b4de2077f11af4827e53170c8daa538331346e/ggml-100-m1/ctest_debug-make.log
+ make -j
[  0%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  1%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  2%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  3%] Building C object src/CMakeFiles/ggml.dir/ggml-metal.m.o
[  4%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
/Users/ggml/work/ggml/src/ggml-metal.m:2060:8: error: expected identifier or '('
extern "C" ggml_backend_t ggml_backend_reg_metal_init(const char * params, void * user_data) {
       ^
1 error generated.
make[2]: *** [src/CMakeFiles/ggml.dir/ggml-metal.m.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [src/CMakeFiles/ggml.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[  6%] Linking CXX static library libcommon.a
[  6%] Built target common
make: *** [all] Error 2
